refactor: enhance Javadoc comments, improve null safety, and streamline code in various classes